tracing-attributes/tests/ui/invalid_keyword_instrument.rs
#![allow(unreachable_code)]

#[tracing::instrument(level = "trace", fields(() = "test"))]
fn test_fn() -> &'static str {}

fn main() {}
